--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ var/
 .installed.cfg
 *.egg
 virtualenv/
+venv/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
